# Dies

./: .gitignore  .justfile  .python-version  .rsyncignore  CLAUDE.md  Cargo.toml  Makefile.toml  README.md  SELF_PLAY_IMPLEMENTATION_PLAN.md  SOW.md  TODO.md  bt-SOW.md  concerto-formation-driver-brief.md  concerto-high-level-brief.md  dies-ilqr-params.json  dies-irql-settings.json  dies-settings.json  draw.ipynb  justfile  match-checklist.md  math.ipynb  mprocs.yaml  nb.ipynb  pyproject.toml  rhai-book.md  rules.md  run.sh  scripting.md  start.sh  x
crates/dies/: Cargo.toml  build.rs
crates/dies-basestation-client/: Cargo.toml
crates/dies-basestation-client/examples/: connect_trials.rs
crates/dies-basestation-client/src/: basestation_client.rs  glue.rs  glue_convert.rs  lib.rs  robot_router.rs  serial_client.rs
crates/dies-cli/: Cargo.toml
crates/dies-cli/src/: cli.rs  cli_modes.rs  convert_logs.rs  executor.rs  main.rs  mock_vision.rs  modes.rs  run_on_server.rs  strategy.rs  tui_utils.rs
crates/dies-cli/src/commands/: convert_last_log.rs  convert_logs.rs  match_mode.rs  mod.rs  run_scenario.rs  self_play.rs  start_ui.rs  test_radio.rs  test_vision.rs
crates/dies-cli/src/modes/: irl.rs  irl_test.rs  live.rs  mod.rs  sim.rs  sim_test.rs  utils.rs
crates/dies-control/: Cargo.toml
crates/dies-control/src/: lib.rs  pid.rs  player_controller.rs  player_input.rs  team_controller.rs  variable.rs
crates/dies-core/: Cargo.toml
crates/dies-core/src/: angle.rs  avoidance_config.rs  controller_settings.rs  debug.rs  debug_info.rs  env.rs  executor_info.rs  executor_settings.rs  field_geometry.rs  geom.rs  ilqr_params.rs  lib.rs  math.rs  motion_bounds.rs  params.rs  player.rs  player_id.rs  possession.rs  robot.rs  runtime.rs  sides.rs  skill_settings.rs  team_id.rs  tunable.rs  variable.rs  vec_map.rs  workspace_utils.rs  world.rs
crates/dies-core/src/context/: base.rs  debug.rs  mod.rs  settings.rs  team_ctx.rs  world_ctx.rs
crates/dies-core/src/debug/: service.rs  types.rs
crates/dies-core/src/frame/: dies_instant.rs  mod.rs  player_frame.rs  role_type.rs  team_color.rs  world_frame.rs
crates/dies-core/src/math/: angle.rs  linalg_utils.rs  mod.rs
crates/dies-core/src/settings/: descriptor.rs  manager.rs  mod.rs
crates/dies-core/src/views/: constrain_views.rs  mod.rs  team_view.rs
crates/dies-core/src/world_frame/: ball_frame.rs  game_state.rs  mod.rs
crates/dies-debug/: Cargo.toml
crates/dies-debug/src/: lib.rs
crates/dies-ersim-env/: Cargo.toml
crates/dies-ersim-env/src/: docker-compose-linux.yml  docker-compose-win.yml  docker-compose.yml  docker_wrapper.rs  ersim.rs  lib.rs
crates/dies-ersim-env/src/bridge/: Dockerfile  mod.rs
crates/dies-ersim-env/src/recv_transport/: linux.rs  mod.rs  win.rs
crates/dies-executor/: Cargo.toml
crates/dies-executor/src/: announcer.rs  game_host.rs  gc_client.rs  handle.rs  headless.rs  lib.rs  player_override.rs  script_host.rs
crates/dies-executor/src/behavior_tree/: argument.rs  bt_callback.rs  bt_core.rs  game_context.rs  mod.rs  rhai_host.rs  rhai_integration.rs  rhai_plugin.rs  (+4 more)
crates/dies-logana/: Cargo.toml
crates/dies-logana/src/: main.rs
crates/dies-logger/: Cargo.toml
crates/dies-logger/benches/: logging.rs
crates/dies-logger/src/: builders.rs  compact.rs  flatten.rs  frame.rs  lib.rs  log_codec.rs  logger.rs  meta.rs  playback.rs  replay.rs  schema.rs  worker.rs  writer.rs
crates/dies-protos/: Cargo.toml  build.rs
crates/dies-protos/src/: lib.rs
crates/dies-python-rt/: Cargo.toml
crates/dies-python-rt/src/: ipc.rs  ipc_codec.rs  lib.rs  local_socket_ipc.rs  messages.rs  py_runtime.rs
crates/dies-serial-client/: Cargo.toml
crates/dies-serial-client/src/: lib.rs  serial_client.rs
crates/dies-settings/: Cargo.toml
crates/dies-settings/src/: lib.rs  test.rs
crates/dies-simulator/: Cargo.toml
crates/dies-simulator-wasm/: Cargo.toml
crates/dies-simulator-wasm/src/: lib.rs
crates/dies-simulator/examples/: bevy-visualizator.rs  main.rs
crates/dies-simulator/src/: box_spawner.rs  consts.rs  lib.rs  run_simulation.rs  utils.rs
crates/dies-ssl-client/: Cargo.toml
crates/dies-ssl-client/src/: lib.rs  transport.rs  vision.rs
crates/dies-strategy/: Cargo.toml
crates/dies-strategy-api/: Cargo.toml
crates/dies-strategy-api/src/: debug.rs  lib.rs  player.rs  skill_builders.rs  strategy.rs  team.rs  world.rs
crates/dies-strategy-protocol/: Cargo.toml
crates/dies-strategy-protocol/src/: control.rs  debug.rs  lib.rs  messages.rs  skill.rs  world.rs
crates/dies-strategy-runner/: Cargo.toml
crates/dies-strategy-runner/src/: ipc.rs  lib.rs  logging.rs  runner.rs
crates/dies-strategy/src/: lib.rs
crates/dies-test-driver/: Cargo.toml  js_stdlib.js
crates/dies-test-driver/src/: bridge.rs  capture.rs  lib.rs  log_bus.rs  primitives.rs  runtime.rs
crates/dies-webui/: Cargo.toml  build.rs
crates/dies-webui/examples/: main.rs  test.rs
crates/dies-webui/src/: bench.rs  executor_task.rs  interactive_main_loop.rs  lib.rs  replay_controller.rs  routes.rs  run_web_ui.rs  server.rs  settings_store.rs  snapshots.rs  ui_common.rs  web_page.rs
crates/dies-webui/static/: index.html
crates/dies-world/: Cargo.toml
crates/dies-world/src/: ball.rs  coord_utils.rs  game_state.rs  geom.rs  lib.rs  player.rs  possession.rs  tracker_settings.rs  world.rs  world_frame.rs
crates/dies/examples/: test_python.rs  visualize_path_planning.rs
crates/dies/src/: lib.rs
crates/python-runner/: Cargo.toml
crates/python-runner/src/: lib.rs
mpc_jax/: .gitignore  README.md  common.py  costs.py  debug.py  dies-settings.json  main.py  pyproject.toml
mpc_jax/mpc_jax/: __init__.py  common.py  costs.py  debug.py  main.py  scoring.py
mpc_jax/tests/: test_simple.py
strategies/concerto/: Cargo.toml
strategies/concerto/examples/: goalie_bench.rs
strategies/concerto/src/: config.rs  driver.rs  formation.rs  geometry.rs  keeper.rs  lib.rs  logo.rs  main.rs  matching.rs  planner.rs  possession.rs
strategies/scenarios/: Cargo.toml
strategies/scenarios/src/: lib.rs
(+1168 files in other folders)
