[workspace]
members = [
    "crates/dies-cli",
    "crates/dies-core",
    "crates/dies-team",
    "crates/dies-protos",
    "crates/dies-basestation-client",
    "crates/dies-simulator",
    "crates/dies-ssl-client",
    "crates/dies-webui",
    "crates/dies-tracker",
    "crates/dies-logger",
    "crates/dies-debug",
    "strategy/dummy-strat",
]
package.edition = "2021"
resolver = "2"
default-members = ["crates/dies-cli"]

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1
