[workspace]
members = [
    "crates/dies-cli",
    "crates/dies-core",
    "crates/dies-executor",
    "crates/dies-protos",
    "crates/dies-basestation-client",
    "crates/dies-simulator",
    "crates/dies-ssl-client",
    "crates/dies-strategy-protocol",
    "crates/dies-strategy-api",
    "crates/dies-strategy-runner",
    "crates/dies-webui",
    "crates/dies-world",
    "crates/dies-logger",
    # Strategy crates
    "strategies/test-strategy",
    "strategies/concerto",
    "strategies/v0",
]
package.edition = "2021"
resolver = "2"
default-members = ["crates/dies-cli"]

[workspace.lints.clippy]
large_enum_variant = "allow"
too_many_arguments = "allow"

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1
