[workspace]
members = [
    "crates/dies-cli",
    "crates/dies-core",
    "crates/dies-executor",
    "crates/dies-protos",
    "crates/dies-basestation-client",
    "crates/dies-simulator",
    "crates/dies-ssl-client",
    "crates/dies-strategy-protocol",
    "crates/dies-strategy-api",
    "crates/dies-strategy-runner",
    "crates/dies-webui",
    "crates/dies-world",
    "crates/dies-logger",
    "crates/dies-test-driver",
    # Strategy crates
    "strategies/concerto",
    "strategies/v0",
]
package.edition = "2021"
resolver = "2"
default-members = ["crates/dies-cli"]

[workspace.lints.clippy]
large_enum_variant = "allow"
too_many_arguments = "allow"

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1

# Use the local glue checkout so the extra API exposed for the raw-Serial
# basestation client (BaseStation/Robot/Debug, broadcast/base-station IDs,
# pub serial field) is picked up. Cut a new glue tag and bump the dep + drop
# this patch before committing/sharing.
[patch."https://github.com/DelftMercurians/glue.git"]
glue = { path = "../glue" }
