[project]
name = "dies-analysis"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["numpy", "pyarrow", "matplotlib", "ipykernel", "jupyterlab"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["tools/dieslog.py"]
sources = ["tools"]
