[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mpc_jax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "equinox>=0.12.2",
    "jax[cuda12]>=0.6.1",
    "numpy>=2.2.6",
    "optax>=0.2.4",
    "matplotlib",
    "tqdm>=4.67.1",
    "jaxtyping>=0.3.2",
]
