[package]
name = "dies-basestation-client"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
dies-core = { version = "0.1.0", path = "../dies-core" }
log = "0.4.21"
serialport = "4.3.0"
tokio = { version = "1.35.1", features = ["rt", "sync"] }
glue = { git = "https://github.com/DelftMercurians/glue.git", tag = "v0.4.0" }
