[package]
name = "dies-cli"
version = "0.1.0"
edition.workspace = true

[dependencies]
tokio = { version = "1.35.1", features = [
    "rt",
    "macros",
    "signal",
    "rt-multi-thread",
    "process",
    "tracing",
] }
anyhow = "1.0.75"
clap = { version = "4.5.1", features = ["derive", "string"] }
dies-core = { version = "0.1.0", path = "../dies-core" }
dies-basestation-client = { version = "0.1.0", path = "../dies-basestation-client" }
dies-ssl-client = { version = "0.1.0", path = "../dies-ssl-client" }
log = "0.4.21"
dies-webui = { version = "0.1.0", path = "../dies-webui" }
dies-logger = { version = "0.1.0", path = "../dies-logger" }
env_logger = "0.11.3"
serde_json = "1.0.120"
network-interface = "2.0.0"
console-subscriber = "0.3.0"
protobuf-json-mapping = "3.5.0"
