[package]
name = "dies-control"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dies-core = { version = "0.1.0", path = "../dies-core" }
log = "0.4.20"
nalgebra = "0.32.4"
num-traits = "0.2.18"
