[package]
name = "dies-core"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
rand = "0.9.0"
serde = { version = "1.0.192", features = ["derive"] }
ts-rs = "10.1.0"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["fs", "io-std"] }
dashmap = "6.1.0"
arc-swap = "1.7.1"

[dev-dependencies]
approx = "0.5.1"
tempfile = "3.10.1"
