[package]
name = "dies-core"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dies-protos = { version = "0.1.0", path = "../dies-protos" }
lazy_static = "1.4.0"
log = "0.4.21"
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
rand = "0.8.5"
serde = { version = "1.0.192", features = ["derive"] }
typeshare = "1.0.3"
glue = { git = "https://github.com/DelftMercurians/glue.git", tag = "v0.6.2" }
serde_json = "1.0.120"
tokio = { version = "1.43.1", features = ["fs", "io-std", "rt", "sync"] }
uuid = { version = "1.9.1", features = ["v4"] }

[dev-dependencies]
approx = "0.5.1"
