[package]
name = "dies-debug"
version = "0.1.0"
edition.workspace = true

[lib]
name = "dies_debug"
path = "src/lib.rs"

[dependencies]
dies-core = { path = "../dies-core" }
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.0", features = ["sync", "rt"] }
typeshare = "1.0.1"
