[package]
name = "dies-ersim-env"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dies-core = { path = "../dies-core" }
anyhow = "1.0.75"
log = "0.4.20"
dies-protos = { path = "../dies-protos" }
tempfile = "3.8.1"

[target.'cfg(unix)'.dependencies]
socket2 = "0.5.5"
polling = "3.3.0"

[dev-dependencies]
env_logger = "0.10.0"
test-log = "0.2.13"
