[package]
name = "dies-executor"
version = "0.1.0"
edition.workspace = true

[dependencies]
tokio = { version = "1.35.1", features = ["rt", "macros", "signal"] }
anyhow = "1.0.75"
dies-core = { version = "0.1.0", path = "../dies-core" }
dies-python-rt = { version = "0.1.0", path = "../dies-python-rt" }
dies-serial-client = { version = "0.1.0", path = "../dies-serial-client" }
dies-ssl-client = { version = "0.1.0", path = "../dies-ssl-client" }
dies-webui = { version = "0.1.0", path = "../dies-webui" }
dies-world = { version = "0.1.0", path = "../dies-world" }
dies-simulator = { version = "0.1.0", path = "../dies-simulator" }
tracing = "0.1.40"
nalgebra = "0.32.4"
dies-protos = { version = "0.1.0", path = "../dies-protos" }
dies-control = { version = "0.1.0", path = "../dies-control" }
