[package]
name = "dies-executor"
version = "0.1.0"
edition.workspace = true

[dependencies]
tokio = { version = "1.35.1", features = ["rt", "macros", "signal", "time"] }
anyhow = "1.0.75"
dies-core = { version = "0.1.0", path = "../dies-core" }
dies-serial-client = { version = "0.1.0", path = "../dies-serial-client" }
dies-ssl-client = { version = "0.1.0", path = "../dies-ssl-client" }
dies-world = { version = "0.1.0", path = "../dies-world" }
dies-simulator = { version = "0.1.0", path = "../dies-simulator" }
log = "0.4.21"
dies-protos = { version = "0.1.0", path = "../dies-protos" }
nalgebra = "0.32.5"
dies-logger = { version = "0.1.0", path = "../dies-logger" }
paste = "1.0.15"
rand = "0.8.5"
serde = "1.0.203"
typeshare = "1.0.3"
