[package]
name = "dies-logana"
version = "0.1.0"
edition.workspace = true
publish = false

# Throwaway analysis tool for the OLD (pre-Arrow) protobuf/msgpack `.log` format.
# Used to characterise vision noise, commanded vs achieved velocity, latency and
# the velocity-lag time constant for the command-aware Kalman work. Safe to delete.

[dependencies]
anyhow = "1"
dies-protos = { version = "0.1.0", path = "../dies-protos" }
protobuf = "3.3.0"
rmpv = "1"

[lints]
workspace = true
