[package]
name = "dies-logger"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = { version = "0.4.35", features = ["alloc"] }
dies-protos = { version = "0.1.0", path = "../dies-protos" }
env_logger = "0.11.3"
log = "0.4.21"
protobuf = "3.4.0"
tokio = { version = "1.36.0", features = ["rt", "fs", "io-std", "io-util", "sync", "macros", "time"] }

[dev-dependencies]
flate2 = "1.0.30"
tempfile = "3.10.1"
