[package]
name = "dies-logger"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
dies-protos = { version = "0.1.0", path = "../dies-protos" }
dies-core = { version = "0.1.0", path = "../dies-core" }
env_logger = "0.11.3"
log = "0.4.21"
protobuf = "3.4.0"
tokio = { version = "1.36.0", features = ["rt", "fs", "io-std", "io-util", "sync", "macros", "time"] }
serde = { version = "1.0.204", features = ["derive"] }
rmp-serde = "1.3.0"

[dev-dependencies]
flate2 = "1.0.30"
tempfile = "3.10.1"
