[package]
name = "dies-logger"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
dies-core = { version = "0.1.0", path = "../dies-core" }
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.140"
arrow = { version = "59.0.0", default-features = false, features = ["ipc"] }
parquet = { version = "59.0.0", default-features = false, features = ["arrow", "zstd"] }
zip = { version = "2.4.2", default-features = false, features = ["deflate", "time"] }
tempfile = "3.10.1"

[dev-dependencies]
log = "0.4.21"

[[bench]]
name = "logging"
harness = false

[lints]
workspace = true
