[package]
name = "dies-protos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.3"
protobuf = "3.3.0"

[build-dependencies]
glob = "0.3.1"
protobuf-codegen = "3.3.0"

[package.metadata.cargo-machete]
ignored = ["protobuf"]
