[package]
name = "dies-python-rt"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interprocess = { version = "1.2.1", default-features = false }
anyhow = "1.0.75"
const_format = "0.2.31"
dirs = "5.0.1"
flate2 = "1.0.27"
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
dies-core = { version = "0.1.0", path = "../dies-core" }
zmq = "0.10.0"
rand = "0.8.5"

[dev-dependencies]
indoc = "2.0.4"
tempfile = "3.8.0"
