[package]
name = "dies-python-rt"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dirs = "5.0.1"
flate2 = "1.0.27"
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["blocking", "json", "stream"] }
serde_json = "1.0.107"
dies-core = { version = "0.1.0", path = "../dies-core" }
tokio = { version = "1.35.1", features = [
    "net",
    "test-util",
    "rt",
    "macros",
    "process",
] }
serde = { version = "1.0.195", features = ["derive"] }
zstd = "0.13.0"
tar = "0.4.40"
tempfile = "3.8.0"
zip = "0.6.6"
path-clean = "1.0.1"
bytes = "1.5.0"
futures-util = "0.3.30"
pep-508 = "0.4.0"
toml = "0.8.10"

[dev-dependencies]
indoc = "2.0.4"
test-log = "0.2.14"
