[package]
name = "dies-settings"
version = "0.1.0"
edition = "2021"

[dependencies]
arc-swap = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra = { version = "0.32", features = ["serde-serialize"] }
thiserror = "1.0"
dies-macros = { path = "../dies-macros" }

[dev-dependencies]
anyhow = "1.0"
