[package]
name = "dies-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
dies-core = { version = "0.1.0", path = "../dies-core" }
dies-protos = { version = "0.1.0", path = "../dies-protos" }
dies-ssl-client = { version = "0.1.0", path = "../dies-ssl-client" }
dies-serial-client = { version = "0.1.0", path = "../dies-serial-client" }
log = "0.4.20"
rapier3d = { version = "0.18.0", features = ["enhanced-determinism"] }
tokio = "1.36.0"
atomic_float = "0.1.0"
crossbeam = "0.8.4"
intbits = "0.2.0"
