[package]
name = "dies-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dies-core = { version = "0.1.0", path = "../dies-core" }
dies-protos = { version = "0.1.0", path = "../dies-protos" }
serde = { version = "1.0.192", features = ["derive"] }
rapier3d = { version = "0.18.0", features = ["enhanced-determinism"] }
