[package]
name = "dies-ssl-client"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
dies-protos = { version = "0.1.0", path = "../dies-protos" }
socket2 = "0.5.5"
tokio = { version = "1.35.1", features = ["net", "io-util", "sync"] }
tracing = "0.1.40"
