[package]
name = "dies-ssl-client"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
dies-protos = { version = "0.1.0", path = "../dies-protos" }
network-interface = "2.0.0"
socket2 = "0.5.5"
tokio = { version = "1.43.1", features = ["net", "io-util", "sync"] }
