[package]
name = "dies-strategy-protocol"
version = "0.1.0"
edition.workspace = true
description = "IPC protocol types for dies strategy communication"

[dependencies]
# Core types (Vector2, Angle, PlayerId, etc.)
dies-core = { version = "0.1.0", path = "../dies-core" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# For HashSet in PlayerState
rustc-hash = "2.0"

[dev-dependencies]
# For testing serialization round-trips
approx = "0.5"

