[package]
name = "dies-webui"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dies-core = { version = "0.1.0", path = "../dies-core" }
tokio = "1.34.0"
axum = { version = "0.7.5", features = ["ws"] }
tower-http = { version = "0.5.2", features = ["fs"] }
futures = "0.3.30"
dies-executor = { version = "0.1.0", path = "../dies-executor" }
serde_json = "1.0.116"
tracing = "0.1.40"
anyhow = "1.0.82"
serde = { version = "1.0.200", features = ["derive"] }
