[package]
name = "dies-webui"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dies-core = { version = "0.1.0", path = "../dies-core" }
tokio = "1.34.0"
axum = { version = "0.7.5", features = ["ws"] }
tower-http = { version = "0.5.2", features = ["fs"] }
futures = "0.3.30"
serde_json = "1.0.116"
log = "0.4.21"
anyhow = "1.0.82"
serde = { version = "1.0.200", features = ["derive"] }
dies-executor = { version = "0.1.0", path = "../dies-executor" }
typeshare = "1.0.3"
dies-world = { version = "0.1.0", path = "../dies-world" }
dies-simulator = { version = "0.1.0", path = "../dies-simulator" }
dies-ssl-client = { version = "0.1.0", path = "../dies-ssl-client" }
dies-basestation-client = { version = "0.1.0", path = "../dies-basestation-client" }
tower-layer = "0.3.2"
