[package]
name = "dies-webui"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dies-core = { version = "0.1.0", path = "../dies-core" }
tokio = "1.34.0"
axum = { version = "0.7.5", features = ["ws"] }
tower-http = { version = "0.5.2", features = ["fs"] }
futures = "0.3.30"
serde_json = "1.0.116"
log = "0.4.21"
anyhow = "1.0.82"
serde = { version = "1.0.200", features = ["derive"] }
dies-executor = { version = "0.1.0", path = "../dies-executor" }
typeshare = "1.0.3"
dies-simulator = { version = "0.1.0", path = "../dies-simulator" }
dies-ssl-client = { version = "0.1.0", path = "../dies-ssl-client" }
dies-basestation-client = { version = "0.1.0", path = "../dies-basestation-client" }
tower-layer = "0.3.2"
dies-protos = { version = "0.1.0", path = "../dies-protos" }
chrono = "0.4.38"
dies-logger = { version = "0.1.0", path = "../dies-logger" }
csv = "1.3"

[features]
mpc = ["dies-executor/mpc"]
