[package]
name = "dies-world"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dies-core = { version = "0.1.0", path = "../dies-core" }
dies-protos = { version = "0.1.0", path = "../dies-protos" }
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }

[dev-dependencies]
rand = "0.8"
rand_distr = "0.4"
