[package]
name = "dies-world"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dies-core = { version = "0.1.0", path = "../dies-core" }
dies-protos = { version = "0.1.0", path = "../dies-protos" }
log = "0.4.22"
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
serde = { version = "1.0.215", features = ["derive"] }

[dev-dependencies]
approx = "0.5.1"
rand = "0.8"
rand_distr = "0.4"
