[package]
name = "dies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
const_format = "0.2.31"
dirs = "5.0.1"
env_logger = "0.10.0"
flate2 = "1.0.27"
log = "0.4.20"
protobuf = "3.3.0"
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
workspace-utils = { version = "0.1.0", path = "../workspace-utils" }
zmq = "0.10.0"


[dev-dependencies]
indoc = "2.0.4"
tempfile = "3.8.0"

[build-dependencies]
glob = "0.3.1"
protobuf-codegen = "3.3.0"

[package.metadata.cargo-machete]
ignored = ["protobuf"]
