[package]
name = "python-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bzip2 = "0.4.4"
clap = { version = "4.3.5", default-features = false, features = [
    "derive",
    "usage",
    "wrap_help",
    "std",
] }
console = "0.15.7"
curl = "0.4.44"
flate2 = "1.0.27"
globset = "0.4.13"
hex = "0.4.3"
indicatif = "0.17.7"
log = "0.4.20"
minijinja = "1.0.8"
once_cell = "1.18.0"
pathdiff = "0.2.1"
pep440_rs = "0.3.12"
pep508_rs = "0.2.3"
python-pkginfo = { version = "0.6.0", features = ["serde"] }
regex = "1.9.6"
same-file = "1.0.6"
serde = "1.0.188"
serde_json = "1.0.107"
sha2 = "0.10.8"
shlex = "1.2.0"
simple-home-dir = "0.2.0"
tar = "0.4.40"
tempfile = "3.8.0"
toml_edit = "0.20.2"
url = "2.4.1"
walkdir = "2.4.0"
zip = "0.6.6"
zstd = "0.12.4"
